hyperdrive (1.2.0~dev) UNRELEASED; urgency=medium

  * Removed the Holesky Staging network option from the default list.

 -- NodeSet Inc. <info@nodeset.io>  Wed, 30 Oct 2024 21:52:04 +0000

hyperdrive (1.1.1) stable; urgency=high

  * Updated Besu, Nethermind, Reth, Nimbus, Prysm, Teku, and Prometheus.
  * Switching networks in the `service config` network dropdown now properly loads the new network settings before starting the containers again.
  * Installing Hyperdrive updates via `apt update` now prompts you to automatically restart the service so the daemons will be up to date.
  * Installing manually via `hyperdrive service install` will now automatically restart the service unless the `--no-restart` flag is provided.
  * Fixed a bug that broke Constellation's automatic signed-exit upload task if an exit message was manually uploaded first via `cs minipool upload-signed-exit`.
  * Fixed a bug that caused Rocket Pool contract queries to hang on single-CPU systems.
  * New global flags: `--itsf` can be used to ignore TX simulation failues and sign / submit TXs anyway, even if they will revert. `--fgl` can force a specific gas limit on all transactions created by whatever command is being run. Do NOT use these unless you know what you're doing and have a good reason.
  * Added `--sbc` and `--slc` to `cs minipool create` which skip node balance and Constellation liquidity checks respectively. Only use this if you intend to sign (but not submit) a TX for manual bundling or submit at a later date when the on-chain conditions become correct.
  * The max fee selection prompt now properly shows the low and high transaction cost range, instead of just showing the high cost twice.
  * Running Constellation or StakeWise commands without the respective module enabled will now print a proper warning message instead of a connection error.
  * Removed delegate info from `cs minipool status` since it is not relevant for Constellation node operators.